--- a/Aula 3/aula3_1c.html
+++ b/Aula 3/aula3_1c.html
@@ -21,14 +21,14 @@
   
   <script>
     var a = document.getElementById("quad1");
-   // var b = document.getElementById("quad2")
+    var b = document.getElementById("quad2")
    // var c = document.getElementById("quad3");
    // bt1.addEventListener("click", mudaTodos);
     
    
     
    a.addEventListener("click", mudaCor)
-    //b.addEventListener("mouseover", mudaCor)
+    b.addEventListener("mouseover", mudaCor)
     //c.addEventListener("mouseout", mudaCor)
 
    // quads.addEventListener("mouseover", mudaTodos)
@@ -36,8 +36,8 @@
     function mudaCor(){
       a.style.background="pink"
       a.innerText="passei"
-     // b.innerText="aqui"  
-   //   b.style.border='solid 2px red'
+      b.innerText="aqui"  
+     b.style.border='solid 2px red'
      // c.style.border='dotted 2px blue'
      // c.innerText ="agora"
     }
