--- a/aula3_1a.html
+++ b/aula3_1a.html
@@ -19,7 +19,7 @@
   
   <script>
     function mudaCor() {
-        document.getElementById("cubo1").style.background = "yellow";
+        document.getElementById("cubo1").style.background = "pink";
     }
     
     function mudaAparTodos() {
